# MdLens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  publishing.md  testing.md
src/mdlens/: cli.py  config.py  db.py  indexer.py  markdown.py  models.py  repo_clone.py  repository.py  schemas.py  ui.py  web.py
src/mdreader/: cli.py  config.py  db.py  markdown.py  repository.py  ui.py  web.py
tests/: conftest.py  test_cli.py  test_db.py  test_indexer_repository.py  test_markdown.py  test_repo_clone.py  test_web.py
