[project]
name = "mdreader"
version = "0.1.0"
description = "A lightweight read-only Markdown reader with a SQLite search index."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "markdown-it-py>=3.0,<4.0",
    "pydantic>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<8.0",
]

[project.scripts]
mdreader = "mdreader:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=mdreader",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "-p",
    "no:cacheprovider",
]

[tool.coverage.run]
branch = true
source = ["mdreader"]
omit = [
    "src/mdreader/__main__.py",
    "src/mdreader/ui.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
